--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 chromadb==1.0.15
 datasets==3.6.0
-faiss==1.5.3
+faiss-cpu==1.11.0
 langchain_huggingface==0.3.0
 nltk==3.9.1
 numpy==2.3.1
@@ -12,3 +12,6 @@ sentence_transformers==5.0.0
 google-genai==1.24.0
 transformers==4.53.1
 elasticsearch
+google==3.0.0
+python-dotenv==1.1.1
+hf_xet==1.1.5
