--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-GEMINI_API_KEY=API
-OTEL_SDK_DISABLED=true
+GEMINI_API_KEY=AIzaSyAMgwjltJTkN79duoAX2uNCmnVjGOrMxD4
 ELASTIC_HOST=http://localhost:9200
+CACHE_DIRECTORY=cache_dir
