feat: add ollama host as env

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 GEMINI_API_KEY=AIzaSyAMgwjltJTkN79duoAX2uNCmnVjGOrMxD4
 ELASTIC_HOST=http://localhost:9200
 CACHE_DIRECTORY=cache_dir
+OLLAMA_HOST=http://localhost:11434
